@@ -85,6 +85,20 @@
      </property>
     </spacer>
    </item>
+   <item row="2" column="1" >
+    <widget class="QCheckBox" name="useNitrogens" >
+     <property name="text" >
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" >
+    <widget class="QLabel" name="label_2" >
+     <property name="text" >
+      <string>Nitrogens</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
