@@ -1,3 +1,11 @@
+2008-03-08  Jordan Mantha  <jordan.mantha@gmail.com>
+
+	* libavogadro/src/engines/ribbonengine.*: Added support for
+	including nitrogens in the protein backbone chain. Also add
+	support for engine configuration persistence (read/writeSettings)
+	* libavogadro/src/engines/ribbonsettingswidget.ui: add checkbox
+	for above.
+
 2008-03-08  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* libavogadro/src/glpainter.cpp: Patch from Jordan Mantha
